# sageware

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  west.yml
app/: CMakeLists.txt  app.overlay  prj.conf
app/boards/custom/plaitpilot/: Kconfig  Kconfig.plaitpilot  board.cmake  board.yml  plaitpilot_pinctrl.dtsi  plaitpilot_procpu.dts  plaitpilot_procpu.yaml  plaitpilot_procpu_defconfig
app/include/: motor.h
app/src/: main.c  motor.c
